--- a/projects/dashboard/src/lib/Containers/products/products.component.scss
+++ b/projects/dashboard/src/lib/Containers/products/products.component.scss
@@ -3,8 +3,20 @@
     font-size: 100%;
 }
 .half-width-field {
-    width: 47%;
+    width: 40%;
 }
 .margin-left-product {
     margin-left: 2rem;
+}
+.spin-pos-product {
+    float: right;
+    font-size: 100%;
+    margin-top: -25px;
+    color: #007bff;
+}
+.quantity-pos-product {
+    margin-left: 39%;
+}
+hr {
+    border-top: 1px solid #d3d1d1;
 }
