--- a/projects/dashboard/src/lib/Components/footer/footer.component.html
+++ b/projects/dashboard/src/lib/Components/footer/footer.component.html
@@ -1,10 +1,10 @@
 <div class="app-footer">
     <div class="app-footer__inner">
         <div class="app-footer-left">
-            <span class="pl-2">Copyright 2020 - Shoppable.com</span>
+            <span class="pl-2">{{ 'DASH.FOOTER.COPY_RIGHTS' | translate }} - Shoppable.com</span>
         </div>
         <div class="app-footer-right">
-            <a class="btn btn-sm btn-primary mr-2" href="#">Homepage</a>
+            <a class="btn btn-sm btn-primary mr-2" href="#">{{ 'DASH.FOOTER.HOME' | translate }}</a>
         </div>
     </div>
 </div>
