--- a/projects/dashboard/src/lib/Components/get-products/get-products.component.html
+++ b/projects/dashboard/src/lib/Components/get-products/get-products.component.html
@@ -1,5 +1,5 @@
 <div class="card-body">
-    <h4 class="card-title">Product</h4>
+    <h4 class="card-title">{{ 'DASH.GET_PRODUCTS.PRODUCTS' | translate }}</h4>
 
     <div class="d-block text-right">
         <button
@@ -34,7 +34,7 @@
 
         <!-- Product Column -->
         <ng-container matColumnDef="Product">
-            <th mat-header-cell *matHeaderCellDef>Product</th>
+            <th mat-header-cell *matHeaderCellDef>{{ 'DASH.GET_PRODUCTS.PRODUCT' | translate }}</th>
             <td mat-cell *matCellDef="let element">
                 <img src="{{ element.imageUrl }}" alt="Product" class="product-img" />
                 <a href="#">{{ element.name }}</a>
@@ -43,7 +43,9 @@
 
         <!-- Category Column -->
         <ng-container matColumnDef="Category">
-            <th mat-header-cell *matHeaderCellDef>Category</th>
+            <th mat-header-cell *matHeaderCellDef>
+                {{ 'DASH.GET_PRODUCTS.CATEGORY' | translate }}
+            </th>
             <td mat-cell *matCellDef="let element">
                 {{ element.categoryId }}
             </td>
@@ -51,12 +53,14 @@
 
         <!-- UserHandle Column -->
         <ng-container matColumnDef="UserHandle">
-            <th mat-header-cell *matHeaderCellDef>added by</th>
+            <th mat-header-cell *matHeaderCellDef>{{ 'DASH.GET_PRODUCTS.ADD' | translate }}</th>
             <td mat-cell *matCellDef="let element">{{ element.userHandle }}</td>
         </ng-container>
         <!-- Available Column -->
         <ng-container matColumnDef="Incoming">
-            <th mat-header-cell *matHeaderCellDef>Incoming</th>
+            <th mat-header-cell *matHeaderCellDef>
+                {{ 'DASH.GET_PRODUCTS.INCOMING' | translate }}
+            </th>
             <td mat-cell *matCellDef="let element">
                 <!-- {{ element.Incoming }} -->
                 <span class="text-center-product">{{ element.unitPrice }}</span>
@@ -65,7 +69,9 @@
 
         <!-- Available Column -->
         <ng-container matColumnDef="Available">
-            <th mat-header-cell *matHeaderCellDef>Available</th>
+            <th mat-header-cell *matHeaderCellDef>
+                {{ 'DASH.GET_PRODUCTS.AVAILABLE' | translate }}
+            </th>
             <td mat-cell *matCellDef="let element">
                 <!-- {{ element.quantityInStock }} -->
                 <span class="text-center-product">{{ element.quantityInStock }}</span>
@@ -74,7 +80,7 @@
 
         <!-- Available Column -->
         <ng-container matColumnDef="Edit">
-            <th mat-header-cell *matHeaderCellDef>Edit quantity available</th>
+            <th mat-header-cell *matHeaderCellDef>{{ 'DASH.GET_PRODUCTS.EDIT' | translate }}</th>
             <td mat-cell *matCellDef="let element">
                 <div class="input-group input-group-product">
                     <div class="input-group-prepend">
@@ -83,7 +89,7 @@
                             type="button"
                             (click)="changeStock(element.productId, StockNum.value)"
                         >
-                            Save
+                            {{ 'DASH.GET_PRODUCTS.SAVE' | translate }}
                         </button>
                     </div>
                     <input
