--- a/projects/dashboard/src/lib/Containers/products/products.component.html
+++ b/projects/dashboard/src/lib/Containers/products/products.component.html
@@ -3,12 +3,12 @@
     <div class="col-md-8">
         <div class="main-card mb-3 card">
             <div class="card-body">
-                <h4 class="card-title">Product</h4>
+                <h4 class="card-title">{{ 'DASH.IMPORT_PRODUCTS.PRODUCT' | translate }}</h4>
 
                 <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
                     <div class="position-relative form-group">
                         <mat-form-field appearance="outline" class="full-width-field">
-                            <mat-label>Titre</mat-label>
+                            <mat-label>{{ 'DASH.IMPORT_PRODUCTS.TITLE' | translate }}</mat-label>
                             <input
                                 matInput
                                 placeholder="Ex. short sleeve t-shirt"
@@ -16,12 +16,12 @@
                                 #Titre
                             />
                             <mat-error *ngIf="productForm.get('Title').hasError('required')">
-                                Titre is
+                                {{ 'DASH.IMPORT_PRODUCTS.FIELD' | translate }}
                                 <strong>{{ 'AUTH.LOGIN.REQUIRED' | translate }}</strong>
                             </mat-error>
                         </mat-form-field>
                         <mat-form-field appearance="outline" class="full-width-field">
-                            <mat-label>Product type</mat-label>
+                            <mat-label>{{ 'DASH.IMPORT_PRODUCTS.TYPE' | translate }}</mat-label>
                             <input
                                 type="text"
                                 placeholder="Pick one"
@@ -45,15 +45,19 @@
                                     productForm.get('category').touched
                                 "
                             >
-                                Select a <strong>category !</strong>
+                                {{ 'DASH.IMPORT_PRODUCTS.SELECT' | translate }}
+                                <strong>{{ 'DASH.IMPORT_PRODUCTS.CATEGORY' | translate }}</strong>
                             </mat-error>
                         </mat-form-field>
 
                         <p *ngIf="!productForm.get('category').hasError('required')">
-                            Selected category: {{ Category.value }}
+                            {{ 'DASH.IMPORT_PRODUCTS.SELECTED_CATEGORY' | translate }}
+                            {{ Category.value }}
                         </p>
                         <mat-form-field appearance="outline" class="full-width-field">
-                            <mat-label>Description</mat-label>
+                            <mat-label>
+                                {{ 'DASH.IMPORT_PRODUCTS.DESCRIPTION' | translate }}</mat-label
+                            >
                             <textarea
                                 matInput
                                 placeholder="Ex. short sleeve t-shirt"
@@ -65,7 +69,8 @@
                         </mat-form-field>
 
                         <div class="position-relative form-group">
-                            <label for="exampleFile">File</label
+                            <label for="exampleFile">
+                                {{ 'DASH.IMPORT_PRODUCTS.FILE' | translate }}</label
                             ><input
                                 name="file"
                                 id="exampleFile"
@@ -79,20 +84,26 @@
                                 *ngIf="isLoading"
                             ></div>
 
-                            <small class="form-text text-muted"
-                                >The image must be in <strong>png</strong> or
-                                <strong>jpeg</strong> format !
+                            <small class="form-text text-muted">
+                                {{ 'DASH.IMPORT_PRODUCTS.IMAGE' | translate }}<strong>png</strong>
+                                {{ 'DASH.IMPORT_PRODUCTS.OR' | translate }} <strong>jpeg</strong>
+                                {{ 'DASH.IMPORT_PRODUCTS.FORMAT' | translate }}
                             </small>
                         </div>
 
                         <hr />
                         <br />
-                        <label>Pricing</label><label class="quantity-pos-product">Quantity</label>
+                        <label>{{ 'DASH.IMPORT_PRODUCTS.PRICING' | translate }}</label
+                        ><label class="quantity-pos-product">{{
+                            'DASH.IMPORT_PRODUCTS.QUANTITY' | translate
+                        }}</label>
 
                         <br />
                         <div class="product-center">
                             <mat-form-field appearance="outline" class="half-width-field">
-                                <mat-label>Price</mat-label>
+                                <mat-label>{{
+                                    'DASH.IMPORT_PRODUCTS.PRICE' | translate
+                                }}</mat-label>
                                 <input
                                     matInput
                                     type="number"
@@ -105,7 +116,7 @@
                                 <mat-error
                                     *ngIf="productForm.get('unitPrice').hasError('required')"
                                 >
-                                    Price is
+                                    {{ 'DASH.IMPORT_PRODUCTS.FIELD' | translate }}
                                     <strong>{{ 'AUTH.LOGIN.REQUIRED' | translate }}</strong>
                                 </mat-error>
                             </mat-form-field>
@@ -114,7 +125,9 @@
                                 appearance="outline"
                                 class="half-width-field margin-left-product"
                             >
-                                <mat-label>Available</mat-label>
+                                <mat-label>{{
+                                    'DASH.IMPORT_PRODUCTS.AVAILABLE' | translate
+                                }}</mat-label>
                                 <input
                                     matInput
                                     type="number"
@@ -126,7 +139,7 @@
                                 <mat-error
                                     *ngIf="productForm.get('quantityInStock').hasError('required')"
                                 >
-                                    Available is
+                                    {{ 'DASH.IMPORT_PRODUCTS.FIELD' | translate }}
                                     <strong>{{ 'AUTH.LOGIN.REQUIRED' | translate }}</strong>
                                 </mat-error>
                             </mat-form-field>
@@ -139,14 +152,14 @@
                         color="primary"
                         [disabled]="!productForm.valid"
                     >
-                        Submit
+                        {{ 'DASH.IMPORT_PRODUCTS.SUBMIT' | translate }}
                     </button>
                 </form>
             </div>
         </div>
     </div>
     <div class="col-md-4">
-        <h2>Card preview</h2>
+        <h2>{{ 'DASH.IMPORT_PRODUCTS.CARD' | translate }}</h2>
 
         <lib-product-view
             imgUrl="{{ productForm.get('Media').value }}"
