--- a/projects/dashboard/src/lib/Components/header/elements/user-box/user-box.component.html
+++ b/projects/dashboard/src/lib/Components/header/elements/user-box/user-box.component.html
@@ -22,8 +22,8 @@
                                 {{ 'DASH.USER_BOX.SETT' | translate }}
                             </button>
                             <!-- <h6 class="dropdown-header">Header</h6> -->
-                            <button class="dropdown-item">
-                                {{ 'DASH.USER_BOX.ACT' | translate }}
+                            <button class="dropdown-item" (click)="logout()">
+                                {{ 'DASH.USER_BOX.LOG' | translate }}
                             </button>
                             <!-- <div class="dropdown-divider"></div>
                             <button class="dropdown-item">Dividers</button> -->
