refactor: refactoring code

--- a/projects/dashboard/src/lib/Components/header/header.component.html
+++ b/projects/dashboard/src/lib/Components/header/header.component.html
@@ -3,6 +3,7 @@
     <div class="app-header__content">
         <div class="app-header-left">
             <app-search-box></app-search-box>
+            <lib-item-list></lib-item-list>
         </div>
         <div class="app-header-right">
             <app-user-box></app-user-box>
