--- a/projects/dashboard/src/lib/Containers/products/products.component.html
+++ b/projects/dashboard/src/lib/Containers/products/products.component.html
@@ -1,4 +1,8 @@
-<app-page-title heading="{{ heading }}" [subheading]="subheading" [icon]="icon"></app-page-title>
+<app-page-title
+    heading="{{ 'DASH.IMPORT_PRODUCTS.HEAD' | translate }}"
+    subheading="{{ 'DASH.IMPORT_PRODUCTS.SUB' | translate }}"
+    [icon]="icon"
+></app-page-title>
 <div class="row">
     <div class="col-md-8">
         <div class="main-card mb-3 card">
