--- a/projects/dashboard/src/lib/Components/header/elements/search-box/search-box.component.html
+++ b/projects/dashboard/src/lib/Components/header/elements/search-box/search-box.component.html
@@ -1,7 +1,11 @@
 <div class="search-wrapper" [class.active]="isActive">
-  <div class="input-holder">
-    <input type="text" placeholder="Type to search" class="search-input">
-    <button class="search-icon" (click)="isActive = true"><span></span></button>
-  </div>
-  <button class="close" (click)="isActive = false"></button>
+    <div class="input-holder">
+        <input
+            type="text"
+            placeholder="{{ 'DASH.SEARCH.SEARCH' | translate }}"
+            class="search-input"
+        />
+        <button class="search-icon" (click)="isActive = true"><span></span></button>
+    </div>
+    <button class="close" (click)="isActive = false"></button>
 </div>
