refactor: refactoring code

--- a/projects/dashboard/src/lib/Components/sidebar/sidebar.component.html
+++ b/projects/dashboard/src/lib/Components/sidebar/sidebar.component.html
@@ -47,7 +47,7 @@
                                             <div class="vsm-item">
                                                 <a
                                                     routerLinkActive="active-item"
-                                                    routerLink="/admin/products/new"
+                                                    routerLink="/products/new"
                                                     class="vsm-link"
                                                 >
                                                     <span class="vsm-title">{{
@@ -58,7 +58,7 @@
                                             <div class="vsm-item">
                                                 <a
                                                     routerLinkActive="active-item"
-                                                    routerLink="/admin/products/inventory"
+                                                    routerLink="/products/inventory"
                                                     class="vsm-link"
                                                 >
                                                     <span class="vsm-title">{{
