--- a/projects/dashboard/src/lib/Components/header/elements/item-list/item-list.component.html
+++ b/projects/dashboard/src/lib/Components/header/elements/item-list/item-list.component.html
@@ -1,6 +1,6 @@
 <ul class="header-menu nav">
     <li class="nav-item">
-        <a routerLinkActive="active-item" routerLink="/admin/products/inventory" class="nav-link">
+        <a routerLinkActive="active-item" routerLink="/products/inventory" class="nav-link">
             <i class="nav-link-icon fa fa-shopping-basket"> </i>
             {{ 'DASH.LIST.INV' | translate }}
         </a>
