--- a/projects/layout/src/lib/Components/cards/card/card.component.scss
+++ b/projects/layout/src/lib/Components/cards/card/card.component.scss
@@ -1,1 +1,10 @@
 @import '../../../../../../store/src/lib/Containers/template/default/default.component.scss';
+
+.mat-success {
+    background-color: #7971ea;
+    color: #fff;
+}
+a,
+p {
+    color: #7971ea !important;
+}
